# StaticProgramAnalyser

./: README.md
Team11/Code11/: .gitignore  CMakeLists.txt  CMakeSettings.json  readme.txt
Team11/Code11/lib/: catch.hpp
Team11/Code11/src/autotester/: CMakeLists.txt
Team11/Code11/src/autotester/src/: TestWrapper.cpp  TestWrapper.h
Team11/Code11/src/integration_testing/: CMakeLists.txt
Team11/Code11/src/spa/: CMakeLists.txt
Team11/Code11/src/unit_testing/: CMakeLists.txt
Team11/Code11/tests/: Large_queries_1.txt  Sample_queries1.txt  Sample_queries2.txt  Sample_source2.txt  Single_Test_Case.txt  SmallTestCase.txt  actual_lines.txt  analysis.xsl  buggy.txt  largest_source_queries.txt  largestsource_query.txt  largestsource_query_copy.txt  singleQuery.txt  singlesource.txt  smalltest.txt  testsource.txt
Team11/Code11/tests/dunCommit/: affectsNext.txt  affectsNextAffects.txt  affectsNextNext.txt  affectsSQ.txt  affectsStar.txt  demo1.txt  demo1q.txt  flat1.txt  (+21 more)
Team11/Tests11/invalid-sources/: invalid1.txt  invalid13.txt  invalid14.txt  invalid15.txt  invalid16.txt  invalid17.txt  invalid18.txt  invalid7.txt  invalid8.txt
Team11/Tests11/iter1-systemtests/: largest_sourcenumbers.txt
Team11/Tests11/iter2-3-systemtests/: AffectsBip-medium.txt  NextBip-medium.txt  iter2_large_queries.txt  iter2_large_source.txt  medium-source-withNums.txt  medium-source.txt  mini-queries.txt  mini-source-withNums.txt  out.xml  singlequery.txt
Team11/Tests11/other-tests/: Sample_Source_Nested.txt  Sample_Source_Nested_withNums.txt  cyclic_query.txt  cyclic_source.txt
(+252 files in other folders)
